fix overflow for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
   height: 100vh;
   margin: 0;
   padding: 0;
-  overflow: hidden;
   position: relative;
 }
 
@@ -48,10 +47,6 @@
 html, body {
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -166,7 +161,6 @@ ul.hideBullets {
     /* background-color: darkgray; */
     display: block;
     word-wrap: break-word;
-    overflow: auto;
     padding: 1em;
     margin: 0.5em;
 
@@ -180,7 +174,6 @@ ul.hideBullets {
     max-width: 100%;
     margin: 0;
     padding: 0.8em;
-    overflow: visible;
 }
 
 #costInfo {
@@ -211,4 +204,8 @@ pre {
 img {
     width: 100px;
     height: 100px;
+}
+
+.searchbox-container {
+    width: 100%;
 }
